cmake_minimum_required(VERSION 3.20)

add_subdirectory(common)

if(NOT APPLE)
  # These plugins are dependent on x86_64 specific SIMD.
  add_subdirectory(CubicPadSynth)
  add_subdirectory(EnvelopedSine)
  add_subdirectory(EsPhaser)
  add_subdirectory(IterativeSinCluster)
endif()

add_subdirectory(BasicLimiter)
add_subdirectory(BasicLimiterAutoMake)
add_subdirectory(ClangCymbal)
add_subdirectory(ClangSynth)
add_subdirectory(CollidingCombSynth)
add_subdirectory(FDNCymbal)
add_subdirectory(FDN64Reverb)
add_subdirectory(FoldShaper)
add_subdirectory(L3Reverb)
add_subdirectory(L4Reverb)
add_subdirectory(LatticeReverb)
add_subdirectory(LightPadSynth)
add_subdirectory(MatrixShifter)
add_subdirectory(MiniCliffEQ)
add_subdirectory(ModuloShaper)
add_subdirectory(OddPowShaper)
add_subdirectory(ParallelComb)
add_subdirectory(PitchShiftDelay)
add_subdirectory(SevenDelay)
add_subdirectory(SoftClipper)
add_subdirectory(SyncSawSynth)
add_subdirectory(TrapezoidSynth)
add_subdirectory(UltraSynth)
add_subdirectory(UltrasonicRingMod)
add_subdirectory(WaveCymbal)
