cmake_minimum_required(VERSION 3.10)

project(TestPlugins)

set(TEST_PLUGIN True)
# add_subdirectory(../BasicLimiter ./bin)
# add_subdirectory(../CollidingCombSynth ./bin)
# add_subdirectory(../CubicPadSynth ./bin)
# add_subdirectory(../EnvelopedSine ./bin)
# add_subdirectory(../EsPhaser ./bin)
# add_subdirectory(../FDNCymbal ./bin)
# add_subdirectory(../FoldShaper ./bin)
# add_subdirectory(../IterativeSinCluster ./bin)
# add_subdirectory(../L3Reverb ./bin)
# add_subdirectory(../L4Reverb ./bin)
# add_subdirectory(../LatticeReverb ./bin)
# add_subdirectory(../LightPadSynth ./bin)
# add_subdirectory(../MatrixShifter ./bin)
# add_subdirectory(../ModuloShaper ./bin)
# add_subdirectory(../OddPowShaper ./bin)
# add_subdirectory(../SevenDelay ./bin)
# add_subdirectory(../SoftClipper ./bin)
# add_subdirectory(../SyncSawSynth ./bin)
# add_subdirectory(../TrapezoidSynth ./bin)
add_subdirectory(../WaveCymbal ./bin)
