function(add_subdir plugin_name)
  add_subdirectory("../${plugin_name}" "./${plugin_name}")
endfunction()

cmake_minimum_required(VERSION 3.10)
project(TestPlugins)
set(TEST_PLUGIN True)

add_subdir(BasicLimiter)
add_subdir(CollidingCombSynth)
add_subdir(CubicPadSynth)
add_subdir(EnvelopedSine)
add_subdir(EsPhaser)
add_subdir(FDNCymbal)
add_subdir(FoldShaper)
add_subdir(IterativeSinCluster)
add_subdir(L3Reverb)
add_subdir(L4Reverb)
add_subdir(LatticeReverb)
add_subdir(LightPadSynth)
add_subdir(MatrixShifter)
add_subdir(ModuloShaper)
add_subdir(OddPowShaper)
add_subdir(SevenDelay)
add_subdir(SoftClipper)
add_subdir(SyncSawSynth)
add_subdir(TrapezoidSynth)
add_subdir(WaveCymbal)
