function(add_subdir plugin_name)
  add_subdirectory("../${plugin_name}" "./${plugin_name}")
endfunction()

cmake_minimum_required(VERSION 3.20)
project(TestPlugins)
set(TEST_PLUGIN True)

# add_subdir(BasicLimiter)
# add_subdir(BasicLimiterAutoMake)
# add_subdir(ClangCymbal)
# add_subdir(ClangSynth)
# add_subdir(CollidingCombSynth)
# add_subdir(CombDistortion)
add_subdir(CubicPadSynth)
# add_subdir(EnvelopedSine)
# add_subdir(EsPhaser)
# add_subdir(FDNCymbal)
# add_subdir(FDN64Reverb)
# add_subdir(FoldShaper)
# add_subdir(IterativeSinCluster)
# add_subdir(L3Reverb)
# add_subdir(L4Reverb)
# add_subdir(LatticeReverb)
# add_subdir(LightPadSynth)
# add_subdir(LongPhaser)
# add_subdir(MatrixShifter)
# add_subdir(MaybeSnare)
# add_subdir(MembraneSynth)
# add_subdir(MiniCliffEQ)
# add_subdir(ModuloShaper)
# add_subdir(NarrowingDelay)
# add_subdir(OddPowShaper)
# add_subdir(OrdinaryPhaser)
# add_subdir(ParallelComb)
# add_subdir(ParallelDetune)
# add_subdir(PitchShiftDelay)
# add_subdir(SevenDelay)
# add_subdir(SoftClipper)
# add_subdir(SyncSawSynth)
# add_subdir(TrapezoidSynth)
# add_subdir(UltraSynth)
# add_subdir(UltrasonicRingMod)
# add_subdir(WaveCymbal)
